--- a/P3/PerFileAccessLog/PerFileAccessLog.csproj
+++ b/P3/PerFileAccessLog/PerFileAccessLog.csproj
@@ -51,7 +51,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LogEntry.cs" />
+    <Compile Include="PerFileLogEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
