--- a/P3/PerFileAccessLog/PerFileAccessLog.csproj
+++ b/P3/PerFileAccessLog/PerFileAccessLog.csproj
@@ -37,6 +37,9 @@
       <HintPath>..\packages\Bogus.18.0.2\lib\net40\Bogus.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
